@@ -328,9 +328,6 @@ static int translate_userdir(request_rec *r)
             if (apr_get_home_directory(&homedir, w, r->pool) == APR_SUCCESS) {
                 filename = apr_pstrcat(r->pool, homedir, "/", userdir, NULL);
             }
-            else {
-                return DECLINED;
-            }
 #else
             return DECLINED;
 #endif
